--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+#env 
+.env*
+.*-env
+!.example-env
+
 # dependencies
 /node_modules
 /.pnp
@@ -17,7 +22,6 @@
 
 # misc
 .DS_Store
-.env*
 
 # debug
 npm-debug.log*
